refactor: update toolbar selelction mode with value notifiers, show unsubscribed message tools error in message bubble

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5325,5 +5325,6 @@
   "enabledRenewal": "Enable Subscription Renewal",
   "subscriptionEndsOn": "Subscription Ends On",
   "subscriptionRenewsOn": "Subscription Renews On",
-  "waitForSubscriptionChanges": "Changes to your subscription may take a moment to reflect in the app."
+  "waitForSubscriptionChanges": "Changes to your subscription may take a moment to reflect in the app.",
+  "subscribeReadingAssistance": "Subscribe to unlock message tools"
 }
