build: add translations

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -3371,12 +3371,6 @@
   },
   "oneWeekTrial": "One Week Trial",
   "downloadXLSXFile": "Download Excel File",
-  "abDisplayName": "Abkhaz",
-  "aaDisplayName": "Afar",
-  "ceDisplayName": "Chechen",
-  "etDisplayName": "Estonian",
-  "elDisplayName": "Greek, Modern",
-  "rmDisplayName": "Romansh",
   "unkDisplayName": "Unknown",
   "wwCountryDisplayName": "World Wide",
   "afCountryDisplayName": "Afghanistan",
@@ -4735,5 +4729,224 @@
   "subscriptionEndsOn": "Subscription Ends On",
   "subscriptionRenewsOn": "Subscription Renews On",
   "waitForSubscriptionChanges": "Changes to your subscription may take a moment to reflect in the app.",
-  "subscribeReadingAssistance": "Subscribe to unlock message tools"
+  "subscribeReadingAssistance": "Subscribe to unlock message tools",
+  "aceDisplayName": "Achinese",
+  "achDisplayName": "Acoli",
+  "afDisplayName": "Afrikaans",
+  "akDisplayName": "Akan",
+  "alzDisplayName": "Alur",
+  "amDisplayName": "Amharic",
+  "arDisplayName": "Arabic",
+  "asDisplayName": "Assamese",
+  "awaDisplayName": "Awadhi",
+  "ayDisplayName": "Aymara",
+  "azDisplayName": "Azerbaijani",
+  "baDisplayName": "Bashkir",
+  "banDisplayName": "Balinese",
+  "bbcDisplayName": "Batak Toba",
+  "beDisplayName": "Belarusian",
+  "bemDisplayName": "Bemba",
+  "bewDisplayName": "Betawi",
+  "bgDisplayName": "Bulgarian",
+  "bhoDisplayName": "Bhojpuri",
+  "bikDisplayName": "Bikol",
+  "bmDisplayName": "Bambara",
+  "bnDisplayName": "Bangla",
+  "bnBDDisplayName": "Bengali (Bangladesh)",
+  "bnINDisplayName": "Bengali (India)",
+  "brDisplayName": "Breton",
+  "bsDisplayName": "Bosnian",
+  "btsDisplayName": "Batak Simalungun",
+  "btxDisplayName": "Batak Karo",
+  "buaDisplayName": "Buriat",
+  "caDisplayName": "Catalan",
+  "cebDisplayName": "Cebuano",
+  "cggDisplayName": "Chiga",
+  "chmDisplayName": "Mari",
+  "ckbDisplayName": "Central Kurdish",
+  "cnhDisplayName": "Hakha Chin",
+  "coDisplayName": "Corsican",
+  "crhDisplayName": "Crimean Turkish",
+  "crsDisplayName": "Seselwa Creole French",
+  "csDisplayName": "Czech",
+  "cvDisplayName": "Chuvash",
+  "cyDisplayName": "Welsh",
+  "daDisplayName": "Danish",
+  "deDisplayName": "German",
+  "dinDisplayName": "Dinka",
+  "doiDisplayName": "Dogri",
+  "dovDisplayName": "Dombe",
+  "dzDisplayName": "Dzongkha",
+  "eeDisplayName": "Ewe",
+  "enDisplayName": "English",
+  "enAUDisplayName": "English (Australia)",
+  "enGBDisplayName": "English (UK)",
+  "enINDisplayName": "English (India)",
+  "enUSDisplayName": "English (US)",
+  "eoDisplayName": "Esperanto",
+  "esDisplayName": "Spanish",
+  "esESDisplayName": "Spanish (Spain)",
+  "esMXDisplayName": "Spanish (Mexico)",
+  "euDisplayName": "Basque",
+  "faDisplayName": "Persian",
+  "ffDisplayName": "Fulah",
+  "fiDisplayName": "Finnish",
+  "filDisplayName": "Filipino",
+  "fjDisplayName": "Fijian",
+  "foDisplayName": "Faroese",
+  "frDisplayName": "French",
+  "frCADisplayName": "French (Canada)",
+  "frFRDisplayName": "French (France)",
+  "fyDisplayName": "Western Frisian",
+  "gaDisplayName": "Irish",
+  "gaaDisplayName": "Ga",
+  "gdDisplayName": "Scottish Gaelic",
+  "glDisplayName": "Galician",
+  "gnDisplayName": "Guarani",
+  "gomDisplayName": "Goan Konkani",
+  "guDisplayName": "Gujarati",
+  "haDisplayName": "Hausa",
+  "hawDisplayName": "Hawaiian",
+  "heDisplayName": "Hebrew",
+  "hiDisplayName": "Hindi",
+  "hilDisplayName": "Hiligaynon",
+  "hmnDisplayName": "Hmong",
+  "hneDisplayName": "Chhattisgarhi",
+  "hrDisplayName": "Croatian",
+  "hrxDisplayName": "Hunsrik",
+  "htDisplayName": "Haitian Creole",
+  "huDisplayName": "Hungarian",
+  "hyDisplayName": "Armenian",
+  "idDisplayName": "Indonesian",
+  "igDisplayName": "Igbo",
+  "iloDisplayName": "Iloko",
+  "isDisplayName": "Icelandic",
+  "itDisplayName": "Italian",
+  "jaDisplayName": "Japanese",
+  "jvDisplayName": "Javanese",
+  "kaDisplayName": "Georgian",
+  "kkDisplayName": "Kazakh",
+  "kmDisplayName": "Khmer",
+  "knDisplayName": "Kannada",
+  "koDisplayName": "Korean",
+  "kokDisplayName": "Konkani",
+  "kriDisplayName": "Krio",
+  "ksDisplayName": "Kashmiri",
+  "ktuDisplayName": "Kituba (Democratic Republic of Congo)",
+  "kuDisplayName": "Kurdish",
+  "kyDisplayName": "Kyrgyz",
+  "laDisplayName": "Latin",
+  "lbDisplayName": "Luxembourgish",
+  "lgDisplayName": "Ganda",
+  "liDisplayName": "Limburgish",
+  "lijDisplayName": "Ligurian",
+  "lmoDisplayName": "Lombard",
+  "lnDisplayName": "Lingala",
+  "loDisplayName": "Lao",
+  "ltDisplayName": "Lithuanian",
+  "ltgDisplayName": "Latgalian",
+  "luoDisplayName": "Luo (Kenya and Tanzania)",
+  "lusDisplayName": "Mizo",
+  "lvDisplayName": "Latvian",
+  "maiDisplayName": "Maithili",
+  "makDisplayName": "Makasar",
+  "mgDisplayName": "Malagasy",
+  "miDisplayName": "Māori",
+  "minDisplayName": "Minangkabau",
+  "mkDisplayName": "Macedonian",
+  "mlDisplayName": "Malayalam",
+  "mnDisplayName": "Mongolian",
+  "mniDisplayName": "Manipuri",
+  "mrDisplayName": "Marathi",
+  "msDisplayName": "Malay",
+  "msArabDisplayName": "Malay (Arabic)",
+  "msMYDisplayName": "Malay (Malaysia)",
+  "mtDisplayName": "Maltese",
+  "mwrDisplayName": "Marwari",
+  "myDisplayName": "Burmese",
+  "nanDisplayName": "Min Nan",
+  "nbDisplayName": "Norwegian (Bokmål)",
+  "neDisplayName": "Nepali",
+  "newDisplayName": "Newari",
+  "nlDisplayName": "Dutch",
+  "nlBEDisplayName": "Flemish",
+  "noDisplayName": "Norwegian",
+  "nrDisplayName": "South Ndebele",
+  "nsoDisplayName": "Northern Sotho",
+  "nusDisplayName": "Nuer",
+  "nyDisplayName": "Nyanja",
+  "ocDisplayName": "Occitan",
+  "omDisplayName": "Oromo",
+  "orDisplayName": "Odia",
+  "paDisplayName": "Punjabi",
+  "paArabDisplayName": "Punjabi (Shahmukhi)",
+  "paINDisplayName": "Punjabi (Gurmukhi)",
+  "pagDisplayName": "Pangasinan",
+  "pamDisplayName": "Pampanga",
+  "papDisplayName": "Papiamento",
+  "plDisplayName": "Polish",
+  "psDisplayName": "Pashto",
+  "ptDisplayName": "Portuguese",
+  "ptBRDisplayName": "Portuguese (Brazil)",
+  "ptPTDisplayName": "Portuguese (Portugal)",
+  "quDisplayName": "Quechua",
+  "rajDisplayName": "Rajasthani",
+  "rnDisplayName": "Rundi",
+  "roDisplayName": "Romanian",
+  "roMDDisplayName": "Moldovan",
+  "romDisplayName": "Romany",
+  "ruDisplayName": "Russian",
+  "rwDisplayName": "Kinyarwanda",
+  "saDisplayName": "Sanskrit",
+  "satDisplayName": "Santali",
+  "scnDisplayName": "Sicilian",
+  "sdDisplayName": "Sindhi",
+  "sgDisplayName": "Sango",
+  "shnDisplayName": "Shan",
+  "siDisplayName": "Sinhala",
+  "skDisplayName": "Slovak",
+  "slDisplayName": "Slovenian",
+  "smDisplayName": "Samoan",
+  "snDisplayName": "Shona",
+  "soDisplayName": "Somali",
+  "sqDisplayName": "Albanian",
+  "srDisplayName": "Serbian",
+  "srMEDisplayName": "Montenegrin",
+  "ssDisplayName": "Swati",
+  "stDisplayName": "Southern Sotho",
+  "suDisplayName": "Sundanese",
+  "svDisplayName": "Swedish",
+  "swDisplayName": "Swahili",
+  "szlDisplayName": "Silesian",
+  "taDisplayName": "Tamil",
+  "teDisplayName": "Telugu",
+  "tetDisplayName": "Tetum",
+  "tgDisplayName": "Tajik",
+  "thDisplayName": "Thai",
+  "tiDisplayName": "Tigrinya",
+  "tkDisplayName": "Turkmen",
+  "tlDisplayName": "Tagalog",
+  "tnDisplayName": "Tswana",
+  "trDisplayName": "Turkish",
+  "tsDisplayName": "Tsonga",
+  "ttDisplayName": "Tatar",
+  "ugDisplayName": "Uyghur",
+  "ukDisplayName": "Ukrainian",
+  "urDisplayName": "Urdu",
+  "urINDisplayName": "Urdu (India)",
+  "urPKDisplayName": "Urdu (Pakistan)",
+  "uzDisplayName": "Uzbek",
+  "viDisplayName": "Vietnamese",
+  "wuuDisplayName": "Wu",
+  "xhDisplayName": "Xhosa",
+  "yiDisplayName": "Yiddish",
+  "yoDisplayName": "Yoruba",
+  "yuaDisplayName": "Yucateco",
+  "yueDisplayName": "Cantonese",
+  "yueCNDisplayName": "Cantonese (China)",
+  "yueHKDisplayName": "Cantonese (Hong Kong)",
+  "zhDisplayName": "Chinese",
+  "zhCNDisplayName": "Chinese (Simplified)",
+  "zhTWDisplayName": "Chinese (Traditional)",
+  "zuDisplayName": "Zulu"
 }
