Make unread badge size consistent regardless of size

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -4948,5 +4948,6 @@
   "zhDisplayName": "Chinese",
   "zhCNDisplayName": "Chinese (Simplified)",
   "zhTWDisplayName": "Chinese (Traditional)",
-  "zuDisplayName": "Zulu"
+  "zuDisplayName": "Zulu",
+  "unreadPlus": "99+"
 }
