--- a/lib/l10n/intl_be.arb
+++ b/lib/l10n/intl_be.arb
@@ -2392,7 +2392,7 @@
   "playWithAI": "Пакуль гуляйце з ШІ",
   "courseStartDesc": "Pangea Bot гатовы да працы ў любы час!\n\n...але навучанне лепш з сябрамі!",
   "@@locale": "be",
-  "@@last_modified": "2025-10-16 13:08:21.169808",
+  "@@last_modified": "2025-11-19 10:06:26.729429",
   "@alwaysUse24HourFormat": {
     "type": "String",
     "placeholders": {}
@@ -12918,6 +12918,16 @@
     "placeholders": {}
   },
   "@highlightVocabTooltip": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "teacherModeTitle": "Рэжым настаўніка",
+  "teacherModeDesc": "Уключыць, каб разблакаваць усе тэмы і дзейнасці. Толькі для адміністратара курса.",
+  "@teacherModeTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@teacherModeDesc": {
     "type": "String",
     "placeholders": {}
   }
