--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5305,5 +5305,7 @@
   "joinCourseWithCode": "Join course with code",
   "joinPublicCourse": "Join public course",
   "vocabLevelsDesc": "This is where vocab words will go once you’ve leveled them up!",
-  "highlightVocabTooltip": "Highlight target vocab words below by sending them or practicing with them in the chat"
+  "highlightVocabTooltip": "Highlight target vocab words below by sending them or practicing with them in the chat",
+  "teacherModeTitle": "Teacher Mode",
+  "teacherModeDesc": "Toggle to unlock all topics and activities. Course admin only."
 }
