--- a/lib/l10n/intl_fi.arb
+++ b/lib/l10n/intl_fi.arb
@@ -4512,7 +4512,7 @@
   "playWithAI": "Leiki tekoälyn kanssa nyt",
   "courseStartDesc": "Pangea Bot on valmis milloin tahansa!\n\n...mutta oppiminen on parempaa ystävien kanssa!",
   "@@locale": "fi",
-  "@@last_modified": "2025-10-16 13:31:00.370211",
+  "@@last_modified": "2025-11-19 10:05:35.933081",
   "@alwaysUse24HourFormat": {
     "type": "String",
     "placeholders": {}
@@ -12464,6 +12464,16 @@
     "placeholders": {}
   },
   "@highlightVocabTooltip": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "teacherModeTitle": "Opettajan tila",
+  "teacherModeDesc": "Vaihda avataksesi kaikki aiheet ja aktiviteetit. Vain kurssin ylläpitäjälle.",
+  "@teacherModeTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@teacherModeDesc": {
     "type": "String",
     "placeholders": {}
   }
