--- a/lib/l10n/intl_fil.arb
+++ b/lib/l10n/intl_fil.arb
@@ -3272,7 +3272,7 @@
   "selectAll": "Piliin lahat",
   "deselectAll": "Huwag piliin lahat",
   "@@locale": "fil",
-  "@@last_modified": "2025-10-16 13:31:03.387348",
+  "@@last_modified": "2025-11-19 10:06:38.816684",
   "@setCustomPermissionLevel": {
     "type": "String",
     "placeholders": {}
@@ -12795,6 +12795,16 @@
     "placeholders": {}
   },
   "@highlightVocabTooltip": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "teacherModeTitle": "Guro Mode",
+  "teacherModeDesc": "I-toggle upang i-unlock ang lahat ng mga paksa at aktibidad. Para lamang sa admin ng kurso.",
+  "@teacherModeTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@teacherModeDesc": {
     "type": "String",
     "placeholders": {}
   }
