--- a/lib/l10n/intl_lt.arb
+++ b/lib/l10n/intl_lt.arb
@@ -4342,7 +4342,7 @@
   "playWithAI": "Žaiskite su dirbtiniu intelektu dabar",
   "courseStartDesc": "Pangea botas pasiruošęs bet kada pradėti!\n\n...bet mokymasis yra geresnis su draugais!",
   "@@locale": "lt",
-  "@@last_modified": "2025-10-16 13:31:41.724130",
+  "@@last_modified": "2025-11-19 10:06:46.685695",
   "@alwaysUse24HourFormat": {
     "type": "String",
     "placeholders": {}
@@ -12624,6 +12624,16 @@
     "placeholders": {}
   },
   "@highlightVocabTooltip": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "teacherModeTitle": "Mokytojo režimas",
+  "teacherModeDesc": "Perjungti, kad atrakintumėte visus dalykus ir veiklas. Tik kurso administratoriams.",
+  "@teacherModeTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@teacherModeDesc": {
     "type": "String",
     "placeholders": {}
   }
