--- a/lib/l10n/intl_sk.arb
+++ b/lib/l10n/intl_sk.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "sk",
-  "@@last_modified": "2025-10-16 13:32:06.139506",
+  "@@last_modified": "2025-11-19 10:05:46.486562",
   "about": "O aplikácii",
   "@about": {
     "type": "String",
@@ -12903,6 +12903,16 @@
     "placeholders": {}
   },
   "@highlightVocabTooltip": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "teacherModeTitle": "Režim učiteľa",
+  "teacherModeDesc": "Prepnúť na odomknutie všetkých tém a aktivít. Iba administrátor kurzu.",
+  "@teacherModeTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@teacherModeDesc": {
     "type": "String",
     "placeholders": {}
   }
