--- a/lib/l10n/intl_vi.arb
+++ b/lib/l10n/intl_vi.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-10-16 13:32:28.677939",
+  "@@last_modified": "2025-11-19 10:06:48.931764",
   "about": "Giới thiệu",
   "@about": {
     "type": "String",
@@ -5760,6 +5760,16 @@
     "placeholders": {}
   },
   "@highlightVocabTooltip": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "teacherModeTitle": "Chế độ Giáo viên",
+  "teacherModeDesc": "Chuyển đổi để mở khóa tất cả các chủ đề và hoạt động. Chỉ dành cho quản trị viên khóa học.",
+  "@teacherModeTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@teacherModeDesc": {
     "type": "String",
     "placeholders": {}
   }
