--- a/lib/l10n/intl_bn.arb
+++ b/lib/l10n/intl_bn.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-10-16 13:08:26.192955",
+  "@@last_modified": "2025-11-19 10:06:57.530222",
   "about": "সম্পর্কে",
   "@about": {
     "type": "String",
@@ -12923,6 +12923,16 @@
     "placeholders": {}
   },
   "@highlightVocabTooltip": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "teacherModeTitle": "শিক্ষক মোড",
+  "teacherModeDesc": "সব বিষয় এবং কার্যকলাপ আনলক করতে টগল করুন। কোর্স প্রশাসক শুধুমাত্র।",
+  "@teacherModeTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@teacherModeDesc": {
     "type": "String",
     "placeholders": {}
   }
