--- a/lib/l10n/intl_ca.arb
+++ b/lib/l10n/intl_ca.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-10-16 13:30:33.942130",
+  "@@last_modified": "2025-11-19 10:06:28.272487",
   "about": "Quant a",
   "@about": {
     "type": "String",
@@ -11843,6 +11843,16 @@
     "placeholders": {}
   },
   "@highlightVocabTooltip": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "teacherModeTitle": "Mode Professor",
+  "teacherModeDesc": "Activa per desbloquejar tots els temes i activitats. Només per a l'administrador del curs.",
+  "@teacherModeTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@teacherModeDesc": {
     "type": "String",
     "placeholders": {}
   }
