--- a/lib/l10n/intl_cs.arb
+++ b/lib/l10n/intl_cs.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "cs",
-  "@@last_modified": "2025-10-16 13:30:36.618840",
+  "@@last_modified": "2025-11-19 10:06:23.270366",
   "about": "O aplikaci",
   "@about": {
     "type": "String",
@@ -12426,6 +12426,16 @@
     "placeholders": {}
   },
   "@highlightVocabTooltip": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "teacherModeTitle": "Režim učitele",
+  "teacherModeDesc": "Přepněte pro odemčení všech témat a aktivit. Pouze pro administrátory kurzu.",
+  "@teacherModeTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@teacherModeDesc": {
     "type": "String",
     "placeholders": {}
   }
