--- a/lib/l10n/intl_da.arb
+++ b/lib/l10n/intl_da.arb
@@ -2411,7 +2411,7 @@
   "playWithAI": "Leg med AI for nu",
   "courseStartDesc": "Pangea Bot er klar til at starte når som helst!\n\n...men læring er bedre med venner!",
   "@@locale": "da",
-  "@@last_modified": "2025-10-16 13:30:39.003047",
+  "@@last_modified": "2025-11-19 10:05:38.285183",
   "@aboutHomeserver": {
     "type": "String",
     "placeholders": {
@@ -12881,6 +12881,16 @@
     "placeholders": {}
   },
   "@highlightVocabTooltip": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "teacherModeTitle": "Lærerindstilling",
+  "teacherModeDesc": "Skift for at låse op for alle emner og aktiviteter. Kun kursusadministrator.",
+  "@teacherModeTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@teacherModeDesc": {
     "type": "String",
     "placeholders": {}
   }
