--- a/lib/l10n/intl_gl.arb
+++ b/lib/l10n/intl_gl.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "gl",
-  "@@last_modified": "2025-10-16 13:31:10.613939",
+  "@@last_modified": "2025-11-19 10:05:33.443954",
   "about": "Acerca de",
   "@about": {
     "type": "String",
@@ -11816,6 +11816,16 @@
     "placeholders": {}
   },
   "@highlightVocabTooltip": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "teacherModeTitle": "Modo Profesor",
+  "teacherModeDesc": "Activa para desbloquear todos os temas e actividades. Só para administradores do curso.",
+  "@teacherModeTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@teacherModeDesc": {
     "type": "String",
     "placeholders": {}
   }
