--- a/lib/l10n/intl_he.arb
+++ b/lib/l10n/intl_he.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-10-16 13:31:12.984526",
+  "@@last_modified": "2025-11-19 10:05:51.297421",
   "about": "אודות",
   "@about": {
     "type": "String",
@@ -12868,6 +12868,16 @@
     "placeholders": {}
   },
   "@highlightVocabTooltip": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "teacherModeTitle": "מצב מורה",
+  "teacherModeDesc": "הפעל כדי לפתוח את כל הנושאים והפעילויות. רק מנהל הקורס.",
+  "@teacherModeTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@teacherModeDesc": {
     "type": "String",
     "placeholders": {}
   }
