--- a/lib/l10n/intl_hi.arb
+++ b/lib/l10n/intl_hi.arb
@@ -4964,7 +4964,7 @@
   "playWithAI": "अभी के लिए एआई के साथ खेलें",
   "courseStartDesc": "पैंजिया बॉट कभी भी जाने के लिए तैयार है!\n\n...लेकिन दोस्तों के साथ सीखना बेहतर है!",
   "@@locale": "hi",
-  "@@last_modified": "2025-10-16 13:31:15.251036",
+  "@@last_modified": "2025-11-19 10:07:10.242188",
   "@alwaysUse24HourFormat": {
     "type": "String",
     "placeholders": {}
@@ -12904,6 +12904,16 @@
     "placeholders": {}
   },
   "@highlightVocabTooltip": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "teacherModeTitle": "शिक्षक मोड",
+  "teacherModeDesc": "सभी विषयों और गतिविधियों को अनलॉक करने के लिए टॉगल करें। केवल पाठ्यक्रम प्रशासक।",
+  "@teacherModeTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@teacherModeDesc": {
     "type": "String",
     "placeholders": {}
   }
