--- a/lib/l10n/intl_ia.arb
+++ b/lib/l10n/intl_ia.arb
@@ -2439,7 +2439,7 @@
   "playWithAI": "Joca con le IA pro ora",
   "courseStartDesc": "Pangea Bot es preste a comenzar a qualunque momento!\n\n...ma apprender es melior con amicos!",
   "@@locale": "ia",
-  "@@last_modified": "2025-10-16 13:31:23.726766",
+  "@@last_modified": "2025-11-19 10:05:56.215123",
   "@alwaysUse24HourFormat": {
     "type": "String",
     "placeholders": {}
@@ -12897,6 +12897,16 @@
     "placeholders": {}
   },
   "@highlightVocabTooltip": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "teacherModeTitle": "Modu Instructore",
+  "teacherModeDesc": "Comuta pro aperiendo omnes argumenta et activitates. Solum administratores cursus.",
+  "@teacherModeTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@teacherModeDesc": {
     "type": "String",
     "placeholders": {}
   }
