--- a/lib/l10n/intl_it.arb
+++ b/lib/l10n/intl_it.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-10-16 13:31:31.204302",
+  "@@last_modified": "2025-11-19 10:06:20.176972",
   "about": "Informazioni",
   "@about": {
     "type": "String",
@@ -11822,6 +11822,16 @@
     "placeholders": {}
   },
   "@highlightVocabTooltip": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "teacherModeTitle": "Modalità Insegnante",
+  "teacherModeDesc": "Attiva per sbloccare tutti gli argomenti e le attività. Solo per l'amministratore del corso.",
+  "@teacherModeTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@teacherModeDesc": {
     "type": "String",
     "placeholders": {}
   }
