--- a/lib/l10n/intl_ka.arb
+++ b/lib/l10n/intl_ka.arb
@@ -3075,7 +3075,7 @@
   "playWithAI": "ამ დროისთვის ითამაშეთ AI-თან",
   "courseStartDesc": "Pangea Bot მზადაა ნებისმიერ დროს გასასვლელად!\n\n...მაგრამ სწავლა უკეთესია მეგობრებთან ერთად!",
   "@@locale": "ka",
-  "@@last_modified": "2025-10-16 13:31:36.334482",
+  "@@last_modified": "2025-11-19 10:07:17.607554",
   "@alwaysUse24HourFormat": {
     "type": "String",
     "placeholders": {}
@@ -12849,6 +12849,16 @@
     "placeholders": {}
   },
   "@highlightVocabTooltip": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "teacherModeTitle": "მასწავლებლის რეჟიმი",
+  "teacherModeDesc": "გამოიყენეთ, რომ გახსნათ ყველა თემა და აქტივობა. მხოლოდ კურსის ადმინისტრატორისთვის.",
+  "@teacherModeTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@teacherModeDesc": {
     "type": "String",
     "placeholders": {}
   }
