--- a/lib/l10n/intl_pl.arb
+++ b/lib/l10n/intl_pl.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "pl",
-  "@@last_modified": "2025-10-16 13:31:52.022877",
+  "@@last_modified": "2025-11-19 10:07:01.450034",
   "about": "O aplikacji",
   "@about": {
     "type": "String",
@@ -11819,6 +11819,16 @@
     "placeholders": {}
   },
   "@highlightVocabTooltip": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "teacherModeTitle": "Tryb Nauczyciela",
+  "teacherModeDesc": "Przełącz, aby odblokować wszystkie tematy i aktywności. Tylko dla administratora kursu.",
+  "@teacherModeTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@teacherModeDesc": {
     "type": "String",
     "placeholders": {}
   }
