--- a/lib/l10n/intl_sv.arb
+++ b/lib/l10n/intl_sv.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-10-16 16:03:28.457217",
+  "@@last_modified": "2025-11-19 10:07:03.292476",
   "about": "Om",
   "@about": {
     "type": "String",
@@ -12297,6 +12297,16 @@
     "placeholders": {}
   },
   "@highlightVocabTooltip": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "teacherModeTitle": "Lärarläge",
+  "teacherModeDesc": "Växla för att låsa upp alla ämnen och aktiviteter. Endast kursadministratör.",
+  "@teacherModeTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@teacherModeDesc": {
     "type": "String",
     "placeholders": {}
   }
