--- a/lib/l10n/intl_zh.arb
+++ b/lib/l10n/intl_zh.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "zh",
-  "@@last_modified": "2025-10-16 13:32:33.841766",
+  "@@last_modified": "2025-11-19 10:06:55.893202",
   "about": "关于",
   "@about": {
     "type": "String",
@@ -11810,6 +11810,16 @@
     "placeholders": {}
   },
   "@highlightVocabTooltip": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "teacherModeTitle": "教师模式",
+  "teacherModeDesc": "切换以解锁所有主题和活动。仅限课程管理员。",
+  "@teacherModeTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@teacherModeDesc": {
     "type": "String",
     "placeholders": {}
   }
