--- a/lib/l10n/intl_zh_Hant.arb
+++ b/lib/l10n/intl_zh_Hant.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-10-16 13:32:35.882830",
+  "@@last_modified": "2025-11-19 10:06:36.975533",
   "about": "關於",
   "@about": {
     "type": "String",
@@ -11817,6 +11817,16 @@
     "placeholders": {}
   },
   "@highlightVocabTooltip": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "teacherModeTitle": "教師模式",
+  "teacherModeDesc": "切換以解鎖所有主題和活動。僅限課程管理員。",
+  "@teacherModeTitle": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@teacherModeDesc": {
     "type": "String",
     "placeholders": {}
   }
