Make unread badge size consistent regardless of size (#4669)
Co-authored-by: ggurdin <ggurdin@gmail.com>

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -4950,6 +4950,7 @@
   "zhCNDisplayName": "Chinese (Simplified)",
   "zhTWDisplayName": "Chinese (Traditional)",
   "zuDisplayName": "Zulu",
+  "unreadPlus": "99+",
   "highlightVocabTooltip": "Highlight target vocab words below by sending them or practicing with them in the chat",
   "teacherModeTitle": "Teacher Mode",
   "teacherModeDesc": "Toggle to unlock all topics and activities. Course admin only."
