Replace saved activity instructions with informative text when nothing saved

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -4953,5 +4953,6 @@
   "unreadPlus": "99+",
   "highlightVocabTooltip": "Highlight target vocab words below by sending them or practicing with them in the chat",
   "teacherModeTitle": "Teacher Mode",
-  "teacherModeDesc": "Toggle to unlock all topics and activities. Course admin only."
+  "teacherModeDesc": "Toggle to unlock all topics and activities. Course admin only.",
+  "noSavedActivitiesYet": "Activities will appear here once they are completed and saved."
 }
